--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
-    "json2csv": "^4.5.3",
+    "downloadjs": "^1.4.7",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "downloadjs": "^1.4.7",
-    "puppeteer": "^1.20.0"
+    "puppeteer": "^1.20.0",
+    "xlsx": "^0.15.1"
   }
 }
