--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "dotenv": "^8.1.0",
     "downloadjs": "^1.4.7",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
